Segundo Commit: Estructura HTML inicial completada y conflictos resueltos

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <!-- HEADER -->
   <header>
     <div class="logo">Papas Locas</div>
     <nav>
@@ -22,7 +21,6 @@
     </nav>
   </header>
 
-  <!-- HERO -->
   <section class="hero" id="inicio">
     <div class="hero-text">
       <h1>¿QUÉ QUIERES HOY?</h1>
@@ -33,7 +31,6 @@
     </div>
   </section>
 
-  <!-- PRESENTACION -->
   <section class="presentacion">
     <h2>Papas Locas</h2>
     <div class="cards">
@@ -54,5 +51,89 @@
       </div>
     </div>
   </section>
+
+  <section class="menu" id="menu">
+    <h2>MENÚ</h2>
+    <div class="grid-menu">
+      <div class="item">
+        <img src="img/burger.jpg" alt="">
+        <h3>Hamburguesa</h3>
+        <p>$40</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="img/picada.jpg" alt="">
+        <h3>Picada</h3>
+        <p>$40</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="img/pan.jpg" alt="">
+        <h3>Pan</h3>
+        <p>$40</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="img/pizza.jpg" alt="">
+        <h3>Pizza</h3>
+        <p>$40</p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="combos" id="combos">
+    <h2>COMBOS</h2>
+    <div class="grid-combos">
+      <div class="item">
+        <img src="img/combo1.jpg" alt="">
+        <h3>Combo Personal</h3>
+        <p>$60</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="img/combo2.jpg" alt="">
+        <h3>Combo Familiar</h3>
+        <p>$100</p>
+        <button>Comprar</button>
+      </div>
+      <div class="item">
+        <img src="img/combo3.jpg" alt="">
+        <h3>Combo Extra</h3>
+        <p>$80</p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section>
+<section class="reservas" id="reservas">
+    <h2>RESERVAS</h2>
+    <form id="formReserva">
+      <input type="text" placeholder="A nombre de:" required>
+      <input type="tel" placeholder="Celular:" required>
+      <input type="date" required>
+      <input type="number" placeholder="Personas:" min="1" required>
+      <input type="time" required>
+      <button type="submit">ENVIAR</button>
+    </form>
+    <p id="mensaje"></p>
+  </section>
+
+  <footer id="contacto">
+    <div class="contacto">
+      <h3>Contáctanos</h3>
+      <p>312739897<br>correo@gmail.com<br>Barrio centro<br>Villagarzón - Putumayo</p>
+    </div>
+    <div class="productos">
+      <h3>Productos nuevos</h3>
+      <ul>
+        <li>Pan Especial</li>
+        <li>Galletas individuales</li>
+      </ul>
+    </div>
+    <div class="social">
+      <p>Síguenos en:</p>
+      <a href="#">FB</a> | <a href="#">IG</a> | <a href="#">YT</a>
+    </div>
+  </footer>
 </body>
 </html>
