--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Papas Locas</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 </head>
-<body>
 
+<body>
+  <!-- HEADER -->
   <header>
     <div class="logo">Papas Locas</div>
     <nav>
@@ -21,6 +23,7 @@
     </nav>
   </header>
 
+  <!-- HERO -->
   <section class="hero" id="inicio">
     <div class="hero-text">
       <h1>¿QUÉ QUIERES HOY?</h1>
@@ -31,6 +34,7 @@
     </div>
   </section>
 
+  <!-- PRESENTACION -->
   <section class="presentacion">
     <h2>Papas Locas</h2>
     <div class="cards">
@@ -52,6 +56,7 @@
     </div>
   </section>
 
+  <!-- MENU -->
   <section class="menu" id="menu">
     <h2>MENÚ</h2>
     <div class="grid-menu">
@@ -82,6 +87,7 @@
     </div>
   </section>
 
+  <!-- COMBOS -->
   <section class="combos" id="combos">
     <h2>COMBOS</h2>
     <div class="grid-combos">
@@ -105,7 +111,9 @@
       </div>
     </div>
   </section>
-<section class="reservas" id="reservas">
+
+  <!-- RESERVAS -->
+  <section class="reservas" id="reservas">
     <h2>RESERVAS</h2>
     <form id="formReserva">
       <input type="text" placeholder="A nombre de:" required>
@@ -118,6 +126,7 @@
     <p id="mensaje"></p>
   </section>
 
+  <!-- FOOTER -->
   <footer id="contacto">
     <div class="contacto">
       <h3>Contáctanos</h3>
@@ -135,5 +144,8 @@
       <a href="#">FB</a> | <a href="#">IG</a> | <a href="#">YT</a>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
