--- a/Index.html
+++ b/Index.html
@@ -39,19 +39,19 @@
     <h2>Papas Locas</h2>
     <div class="cards">
       <div class="card">
-        <img src="img/plato1.jpg" alt="plato">
-        <h3>Subtítulo</h3>
-        <p>Cuerpo de texto breve o lo que desees añadir adicionalmente al subtítulo.</p>
+        <img src="IMG/Img_2.jpg" alt="plato">
+        <h3>"La combinación perfecta que nunca falla"</h3>
+        <p>"La hamburguesa que conquistará tu corazón con la cantidad de saboores que haran explotar tu boca"</p>
       </div>
       <div class="card">
-        <img src="img/plato2.jpg" alt="plato">
-        <h3>Subtítulo</h3>
-        <p>Cuerpo de texto breve o lo que desees añadir sobre el tema principal.</p>
+        <img src="IMG/Img_7.jpg" alt="plato">
+        <h3>"Crujientes por fuera, suaves por dentro, perfectas siempre"</h3>
+        <p>"Salchipapas que alegran tu día, crujientes, sabrosas y totalmente adictivas"</p>
       </div>
       <div class="card">
-        <img src="img/plato3.jpg" alt="plato">
-        <h3>Subtítulo</h3>
-        <p>Cuerpo de texto breve o lo que desees compartir adicionalmente.</p>
+        <img src="IMG/Img_3.jpg" alt="plato">
+        <h3>"Crujientes, jugosas y llenas de actitud"</h3>
+        <p>"El sabor que no podrás olvidar, tan buenas que querrás chupar hasta los dedos"</p>
       </div>
     </div>
   </section>
@@ -61,25 +61,25 @@
     <h2>MENÚ</h2>
     <div class="grid-menu">
       <div class="item">
-        <img src="img/burger.jpg" alt="">
+        <img src="IMG/Img_2.jpg" alt="">
         <h3>Hamburguesa</h3>
         <p>$40</p>
         <button>Comprar</button>
       </div>
       <div class="item">
-        <img src="img/picada.jpg" alt="">
+        <img src="IMG/Img_4.jpg" alt="">
         <h3>Picada</h3>
         <p>$40</p>
         <button>Comprar</button>
       </div>
       <div class="item">
-        <img src="img/pan.jpg" alt="">
-        <h3>Pan</h3>
+        <img src="IMG/Img_5.jpg" alt="">
+        <h3>Sándwich</h3>
         <p>$40</p>
         <button>Comprar</button>
       </div>
       <div class="item">
-        <img src="img/pizza.jpg" alt="">
+        <img src="IMG/Img_6.jpg" alt="">
         <h3>Pizza</h3>
         <p>$40</p>
         <button>Comprar</button>
@@ -92,19 +92,19 @@
     <h2>COMBOS</h2>
     <div class="grid-combos">
       <div class="item">
-        <img src="img/combo1.jpg" alt="">
+        <img src="IMG/Img_8.jpg" alt="">
         <h3>Combo Personal</h3>
         <p>$60</p>
         <button>Comprar</button>
       </div>
       <div class="item">
-        <img src="img/combo2.jpg" alt="">
+        <img src="IMG/Img_9.jpg" alt="">
         <h3>Combo Familiar</h3>
         <p>$100</p>
         <button>Comprar</button>
       </div>
       <div class="item">
-        <img src="img/combo3.jpg" alt="">
+        <img src="IMG/Img_10.jpg" alt="">
         <h3>Combo Extra</h3>
         <p>$80</p>
         <button>Comprar</button>
