--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,9 @@
 <body>
   <!-- HEADER -->
   <header>
-    <div class="logo">Papas Locas</div>
+    <div class="logo"><img src="IMG/logo.png" alt=""></div>
     <nav>
       <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#menu">Menú</a></li>
         <li><a href="#combos">Combos</a></li>
         <li><a href="#reservas">Reservas</a></li>
         <li><a href="#contacto">Ubicación y Contacto</a></li>
@@ -26,8 +24,8 @@
   <!-- HERO -->
   <section class="hero" id="inicio">
     <div class="hero-text">
-      <h1>¿QUÉ QUIERES HOY?</h1>
-      <p>Ven y disfruta de las más ricas Papas de Villagarzón.<br>
+      <h1 class="bungee-regular">¿QUÉ QUIERES HOY?</h1>
+      <p class="heroP">Ven y disfruta de las más ricas Papas de Villagarzón.<br>
         ¡Deja que tu paladar disfrute de una sensación increíble!
       </p>
       <a href="#menu" class="btn">Menú</a>
@@ -41,17 +39,14 @@
       <div class="card">
         <img src="IMG/Img_2.jpg" alt="plato">
         <h3>"La combinación perfecta que nunca falla"</h3>
-        <p>"La hamburguesa que conquistará tu corazón con la cantidad de saboores que haran explotar tu boca"</p>
       </div>
       <div class="card">
         <img src="IMG/Img_7.jpg" alt="plato">
         <h3>"Crujientes por fuera, suaves por dentro, perfectas siempre"</h3>
-        <p>"Salchipapas que alegran tu día, crujientes, sabrosas y totalmente adictivas"</p>
       </div>
       <div class="card">
         <img src="IMG/Img_3.jpg" alt="plato">
         <h3>"Crujientes, jugosas y llenas de actitud"</h3>
-        <p>"El sabor que no podrás olvidar, tan buenas que querrás chupar hasta los dedos"</p>
       </div>
     </div>
   </section>
@@ -116,10 +111,10 @@
   <section class="reservas" id="reservas">
     <h2>RESERVAS</h2>
     <form id="formReserva">
-      <input type="text" placeholder="A nombre de:" required>
-      <input type="tel" placeholder="Celular:" required>
+      <input type="text" placeholder="A nombre de" required>
+      <input type="tel" placeholder="Celular" required>
       <input type="date" required>
-      <input type="number" placeholder="Personas:" min="1" required>
+      <input type="number" placeholder="Personas" min="1" max="10" required>
       <input type="time" required>
       <button type="submit">ENVIAR</button>
     </form>
@@ -140,8 +135,8 @@
       </ul>
     </div>
     <div class="social">
-      <p>Síguenos en:</p>
-      <a href="#">FB</a> | <a href="#">IG</a> | <a href="#">YT</a>
+      <p style="color: #1a0f0a;">Síguenos en:</p>
+      <a href="https://www.facebook.com/papas.locas.21481" target="_blank"><img src="IMG/facebook.png" alt=""></a>  <a href="https://www.instagram.com/papas_locas_villagarzon/" target="_blank"><img src="IMG/instagram.png" alt=""></a>  <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D573155815865%26fbclid%3DPAZXh0bgNhZW0CMTEAAadrIpfRVDxZZ_tsfk73VkAY5vCQbympe2EBeOIALLGq0pQMVu28G4sF_Ht54g_aem_8xDni7X7JDu3OUFKbqf35w&e=AT0rEslVmtKmpgthaDwnr7I4sZbCWDbN6e3OUIsiBkKgUk0csXiJPFTRVSjDb2DPdljMQ7-nJGVxl2QxcTmmcq4_crFEYRzmbkMIq_VZrA" target="_blank"><img src="IMG/whatsapp.png" alt=""></a>
     </div>
   </footer>
 
