--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-  <!-- HEADER -->
   <header>
     <div class="logo"><img src="IMG/logo.png" alt=""></div>
     <nav>
@@ -17,11 +16,22 @@
         <li><a href="#combos">Combos</a></li>
         <li><a href="#reservas">Reservas</a></li>
         <li><a href="#contacto">Ubicación y Contacto</a></li>
+        <li class="cart-nav-item">
+            <div class="cart-container">
+                <img src="IMG/img_11.jpg" alt="Carrito de Compras" class="cart-icon" id="cartIcon">
+                <span class="cart-count" id="cartCount">0</span>
+            </div>
+        </li>
       </ul>
     </nav>
   </header>
-
-  <!-- HERO -->
+<div class="cart-dropdown" id="cartDropdown" style="display: none; padding: 15px; border: 1px solid #FF6F00; position: fixed; right: 20px; top: 65px; background: #1a0f0a; z-index: 1000; border-radius: 8px; width: 300px;">
+      <p style="text-align: center; color: #FFB74D; margin: 0;">Los ítems se muestran en el mensaje de Finalizar Compra.</p>
+      <div class="cart-summary" style="border-top: 1px solid #FF6F00; padding-top: 10px; margin-top: 10px; text-align: right;">
+          <p style="color: #FFB74D; font-family: 'Bungee', sans-serif;">Total: <span id="cartTotal">$0.00</span></p>
+          <button id="btnCheckout" style="width: 100%; padding: 10px; background: #FF6F00; border: none; border-radius: 5px; cursor: pointer; color: #1a0f0a; font-family: 'Bungee', sans-serif;">Finalizar Compra</button>
+      </div>
+  </div>
   <section class="hero" id="inicio">
     <div class="hero-text">
       <h1 class="bungee-regular">¿QUÉ QUIERES HOY?</h1>
@@ -32,7 +42,6 @@
     </div>
   </section>
 
-  <!-- PRESENTACION -->
   <section class="presentacion">
     <h2>Papas Locas</h2>
     <div class="cards">
@@ -51,38 +60,32 @@
     </div>
   </section>
 
-  <!-- MENU -->
   <section class="menu" id="menu">
     <h2>MENÚ</h2>
     <div class="grid-menu">
       <div class="item">
         <img src="IMG/Img_2.jpg" alt="">
         <h3>Hamburguesa</h3>
-        <p>$40</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Hamburguesa" data-precio="40">Agregar al Carrito</button>
       </div>
       <div class="item">
         <img src="IMG/Img_4.jpg" alt="">
         <h3>Picada</h3>
-        <p>$40</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Picada" data-precio="40">Agregar al Carrito</button>
       </div>
       <div class="item">
         <img src="IMG/Img_5.jpg" alt="">
         <h3>Sándwich</h3>
-        <p>$40</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Sándwich" data-precio="40">Agregar al Carrito</button>
       </div>
       <div class="item">
         <img src="IMG/Img_6.jpg" alt="">
         <h3>Pizza</h3>
-        <p>$40</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Pizza" data-precio="40">Agregar al Carrito</button>
       </div>
     </div>
   </section>
 
-  <!-- COMBOS -->
   <section class="combos" id="combos">
     <h2>COMBOS</h2>
     <div class="grid-combos">
@@ -90,24 +93,23 @@
         <img src="IMG/Img_8.jpg" alt="">
         <h3>Combo Personal</h3>
         <p>$60</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Combo Personal" data-precio="60">Agregar al Carrito</button>
       </div>
       <div class="item">
         <img src="IMG/Img_9.jpg" alt="">
         <h3>Combo Familiar</h3>
         <p>$100</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Combo Familiar" data-precio="100">Agregar al Carrito</button>
       </div>
       <div class="item">
         <img src="IMG/Img_10.jpg" alt="">
         <h3>Combo Extra</h3>
         <p>$80</p>
-        <button>Comprar</button>
+        <button class="btn-add-to-cart" data-nombre="Combo Extra" data-precio="80">Agregar al Carrito</button>
       </div>
     </div>
   </section>
 
-  <!-- RESERVAS -->
   <section class="reservas" id="reservas">
     <h2>RESERVAS</h2>
     <form id="formReserva">
@@ -121,7 +123,6 @@
     <p id="mensaje"></p>
   </section>
 
-  <!-- FOOTER -->
   <footer id="contacto">
     <div class="contacto">
       <h3>Contáctanos</h3>
