--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
         <li><a href="#contacto">Ubicación y Contacto</a></li>
         <li class="cart-nav-item">
             <div class="cart-container">
-                <img src="IMG/img_11.jpg" alt="Carrito de Compras" class="cart-icon" id="cartIcon">
+                <img src="IMG/img_11.png" alt="Carrito de Compras" class="cart-icon" id="cartIcon">
                 <span class="cart-count" id="cartCount">0</span>
             </div>
         </li>
